--- a/package.json
+++ b/package.json
@@ -5,36 +5,35 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.1",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "firebase": "^7.20.0",
     "gh-pages": "^3.1.0",
     "jwt-decode": "^3.0.0-beta.2",
     "moment": "^2.29.0",
-    "primeicons": "^4.0.0",
-    "primereact": "^5.0.0-rc.2",
-    "react": "^16.13.1",
-    "react-datepicker": "^3.2.2",
+    "react": "^16.14.0",
+    "react-chartjs-2": "^2.10.0",
+    "react-date-range": "^1.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "react-table": "^7.5.0",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.0",
-    "uuid": "^8.3.0",
-    "uuidv4": "^6.2.3"
+    "styled-components": "^5.2.0"
   },
   "homepage": ".",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "sudo sysctl -w fs.inotify.max_user_watches=100000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
