--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-date-range": "^1.1.3",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
@@ -31,6 +32,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0"
   },
+  "homepage": "https://voloxatyj.github.io/money_tracker-Make-Save-",
   "scripts": {
     "start": "sudo sysctl -w fs.inotify.max_user_watches=100000 && react-scripts start",
     "build": "react-scripts build",
