--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "firebase": "^7.21.0",
     "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
     "uuidv4": "^6.2.3",
     "xyz": "^4.0.0"
   },
