--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^2.16.1",
     "firebase": "^7.20.0",
     "gh-pages": "^3.1.0",
-    "jwt-decode": "^3.0.0-beta.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.0",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
