--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
-    "env-cmd": "^10.1.0",
     "firebase": "^7.20.0",
     "gh-pages": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -55,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
