--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "date-fns": "^2.16.1",
     "firebase": "^7.20.0",
     "gh-pages": "^3.1.0",
+    "husky": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
+    "lint-staged": "^10.5.3",
     "moment": "^2.29.0",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.10.0",
@@ -43,6 +45,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+    "pre-commit": "lint-staged"
+   }
+  },
+  "lint-staged": {
+   "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "prettier --write"
+  ]
+ },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -56,6 +68,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "^2.2.1"
   }
 }
