--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "firebase": "^7.20.0",
-    "gh-pages": "^3.1.0",
     "husky": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
@@ -36,7 +35,7 @@
   },
   "homepage": "https://voloxatyj.github.io/money_tracker-Make-Save-",
   "scripts": {
-    "start": "sudo sysctl -w fs.inotify.max_user_watches=100000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -47,12 +46,12 @@
   },
   "husky": {
     "hooks": {
-    "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-   "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-    "prettier --write"
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
     ]
   },
   "browserslist": {
